启动文件优化